fix(search): update search button structure and styles for better alignment

--- a/src/css/components/filter.css
+++ b/src/css/components/filter.css
@@ -174,6 +174,12 @@
   stroke: rgb(var(--cl-black));
 }
 
+.search-btn {
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+
 @media screen and (min-width: 768px) {
   .search-icon {
     right: 15px;
